# verion-aI-grader-

./: .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
auth_keys/: apps.py  authentication.py  models.py
auth_keys/management/commands/: generate_api_key.py
auth_keys/migrations/: 0001_initial.py
grader/: bedrock.py  db_router.py  grading_scale.py  models.py  plagiarism.py  scoring.py  serializers.py  services.py  urls.py  views.py
grader/migrations/: 0001_initial.py
verion_ai_grader/: asgi.py  settings.py  urls.py  wsgi.py
